--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-BlowStamp Bitcoin App
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="keywords" content="BlowStamp Bitcoin App" />
+    <meta name="author" content="BlowStamp Bitcoin App" />
+    <meta name="description" content="BlowStamp Bitcoin App" />
+    <link rel="shortcut icon" href="http://f.cl.ly/items/1M0V3d0U0j3m0g2S3e3V/favicon.ico"/>
+    <title>BlowStamp Bitcoin App</title>
+<br><br>
+<script type="text/javascript"> 
+function display_c(){
+var refresh=1000; // Refresh rate in milli seconds
+mytime=setTimeout('display_ct()',refresh)
+}
+
+function display_ct() {
+var strcount
+var x = new Date()
+document.getElementById('ct').innerHTML = x;
+tt=display_c();
+ }
+</script>
+<body onload=display_ct();>
+<span id='ct' ></span>
+     
+  </body>
+</html>
