--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="BlowStamp Bitcoin App" />
     <link rel="shortcut icon" href="http://f.cl.ly/items/1M0V3d0U0j3m0g2S3e3V/favicon.ico"/>
     <title>BlowStamp Bitcoin App</title>
+<p>BlowStamp Bitcoin App</p>
 <br><br>
 <script type="text/javascript"> 
 function display_c(){
