--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ tt=display_c();
  }
 </script>
 <body onload=display_ct();>
+  <link="green" vlink="#green" alink="blue"> 
 <span id='ct' ></span>
      
   </body>
