--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ tt=display_c();
 <body onload=display_ct();>
   <link="green" vlink="#green" alink="blue"> 
 <span id='ct' ></span>
-     
+
+<p><a href="https://explorer.chain.com">Chain.com</a></p>
+<p><a href="https://insight.bitpay.com">insight by BitPay</a></p>
   </body>
 </html>
