--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ tt=display_c();
   <link="green" vlink="#green" alink="blue"> 
 <span id='ct' ></span>
 
-<p><a href="https://explorer.chain.com">Chain.com</a></p>
+<p><a href="https://explorer.chain.com">Chain.com (non-secure)</a></p>
 <p><a href="https://insight.bitpay.com">insight by BitPay</a></p>
   </body>
 </html>
