--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@ document.getElementById('ct').innerHTML = x;
 tt=display_c();
  }
 </script>
-<body onload=display_ct();>
-  <link="green" vlink="#green" alink="blue"> 
+<body onload=display_ct(); link="green" vlink="green" alink="blue">
 <span id='ct' ></span>
 
 <p><a href="https://explorer.chain.com">Chain.com (non-secure)</a></p>
