--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ document.getElementById('ct').innerHTML = x;
 tt=display_c();
  }
 </script>
-<body onload=display_ct(); link="green" vlink="green" alink="blue">
+<body onload=display_ct(); link="green" vlink="green" alink="cyan">
 <span id='ct' ></span>
 
 <p><a href="https://explorer.chain.com">Chain.com (non-secure)</a></p>
