--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@ tt=display_c();
 <body onload=display_ct(); link="green" vlink="green" alink="cyan">
 <span id='ct' ></span>
 
-<p><a href="https://explorer.chain.com">Chain.com (non-secure)</a></p>
-<p><a href="https://insight.bitpay.com">insight by BitPay</a></p>
+<p>
+<a href="https://explorer.chain.com">Chain.com (non-secure)</a>
+<a href="https://blockchain.info">Blockchain.info</a>
+<a href="https://insight.bitpay.com">insight by BitPay</a>
+</p>
   </body>
 </html>
