--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ tt=display_c();
 <span id='ct' ></span>
 
 <p>
-<a href="https://explorer.chain.com">Chain.com (non-secure)</a>
-<a href="https://blockchain.info">Blockchain.info</a>
-<a href="https://insight.bitpay.com">insight by BitPay</a>
+<a href="https://explorer.chain.com">Chain.com (non-secure)</a><br>
+<a href="https://blockchain.info">Blockchain.info</a><br>
+<a href="https://insight.bitpay.com">insight by BitPay</a><br>
 </p>
   </body>
 </html>
