--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ document.getElementById('ct').innerHTML = x;
 tt=display_c();
  }
 </script>
-<body onload=display_ct(); link="green" vlink="green" alink="2E9AFE">
+<body onload=display_ct(); link="#088A4B" vlink="#088A4B" alink="#2E9AFE">
 <span id='ct' ></span>
 
 <p>
