--- a/index.html
+++ b/index.html
@@ -31,4 +31,6 @@ tt=display_c();
 <a href="https://insight.bitpay.com">insight by BitPay</a><br>
 </p>
   </body>
+  
+  <footer>&copy; 2015 <b>BlowStamp</b> Bitcoin App</footer>
 </html>
