--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ tt=display_c();
 
 <p>
 <a href="https://explorer.chain.com">Chain.com (non-secure)</a><br>
+<a href="https://chain.com/docs">Chain API docs</a><br>
 <a href="https://blockchain.info">Blockchain.info</a><br>
 <a href="https://insight.bitpay.com">insight by BitPay</a><br>
 </p>
