--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ tt=display_c();
 <span id='ct' ></span>
 
 <p>
-<a href="https://explorer.chain.com">Chain.com (non-secure)</a><br>
+<a href="https://explorer.chain.com">Chain.com</a> (non-secure)<br>
 <a href="https://chain.com/docs">Chain API docs</a><br>
 <a href="https://developers.coinbase.com>Coinbase infrastructure for developers (API)</a><br>
 <a href="https://blockchain.info">Blockchain.info</a><br>
