--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ tt=display_c();
 <p>
 <a href="https://explorer.chain.com">Chain.com</a> (non-secure)<br>
 <a href="https://chain.com/docs">Chain API docs</a><br>
-<a href="https://developers.coinbase.com>Coinbase infrastructure for developers (API)</a><br>
+<a href="https://developers.coinbase.com">Coinbase infrastructure for developers (API)</a><br>
 <a href="https://blockchain.info">Blockchain.info</a><br>
 <a href="https://insight.bitpay.com">insight by BitPay</a><br>
 <a href="https://www.blockonomics.co">Blockonomics.co</a><br>
