--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ tt=display_c();
 <a href="https://blockchain.info">Blockchain.info</a><br>
 <a href="https://insight.bitpay.com">insight by BitPay</a><br>
 <a href="https://www.blockonomics.co">Blockonomics.co</a><br>
+<a href="https://cryptowat.ch/btce/ltcbtc/5min">Litecoin</a><br>
 </p>
   </body>
   
