--- a/index.html
+++ b/index.html
@@ -25,14 +25,28 @@ tt=display_c();
 <body onload=display_ct(); link="#088A4B" vlink="#2E9AFE" alink="#2E9AFE">
 <span id='ct' ></span>
 
-<p>
+<p><b>API:</b><br>
 <a href="https://explorer.chain.com">Chain.com</a> (non-secure)<br>
 <a href="https://chain.com/docs">Chain API docs</a><br>
 <a href="https://developers.coinbase.com">Coinbase infrastructure for developers (API)</a><br>
 <a href="https://blockchain.info">Blockchain.info</a><br>
 <a href="https://insight.bitpay.com">insight by BitPay</a><br>
+</p>
+<p><b>Monitors:</b><br>
 <a href="https://www.blockonomics.co">Blockonomics.co</a><br>
+</p>
+<p><b>Charts:</b><br>
 <a href="https://cryptowat.ch/btce/ltcbtc/5min">Litecoin</a><br>
+</p>
+<p><b>Online:</b><br>
+<a href="https://www.bitpay.com">BitPay</a><br>
+<a href="https://www.coinbase.com">Coinbase</a><br>
+<a href="https://www.xapo.com">XAPO</a><br>
+<a href="https://www.kraken.com">Kraken</a><br>
+<a href="https://www.gemini.com">Gemini</a><br>
+<a href="https://www.lamassu.is">Lamassu</a><br>
+<a href="https://www.robocoin.com">Robocoin</a><br>
+<a href="https://www.ripple.com">Ripple</a><br>
 </p>
   </body>
   
