--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ tt=display_c();
 <a href="https://cryptowat.ch/btce/ltcbtc/5min">Litecoin</a><br>
 </p>
 <p><b>Online:</b><br>
-<a href="https://www.bitpay.com">BitPay</a><br>
-<a href="https://www.coinbase.com">Coinbase</a><br>
-<a href="https://www.xapo.com">XAPO</a><br>
-<a href="https://www.kraken.com">Kraken</a><br>
-<a href="https://www.gemini.com">Gemini</a><br>
-<a href="https://www.lamassu.is">Lamassu</a><br>
-<a href="https://www.robocoin.com">Robocoin</a><br>
-<a href="https://www.ripple.com">Ripple</a><br>
+<a href="https://bitpay.com/tour">BitPay</a><br>
+<a href="https://coinbase.com">Coinbase</a><br>
+<a href="https://xapo.com">XAPO</a><br>
+<a href="https://kraken.com">Kraken</a><br>
+<a href="https://gemini.com">Gemini</a><br>
+<a href="https://lamassu.is">Lamassu</a><br>
+<a href="https://robocoin.com">Robocoin</a><br>
+<a href="https://ripple.com">Ripple</a><br>
 </p>
   </body>
   
