--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ tt=display_c();
 </p>
 <p><b>Online:</b><br>
 <a href="https://bitpay.com/tour">BitPay</a><br>
-<a href="https://coinbase.com">Coinbase</a><br>
+<a href="https://www.coinbase.com">Coinbase</a><br>
+<a href="https://www.coinbase.com/vault">Coinbase Vault</a><br>
+<a href="https://www.coinbase.com/multisig">Coinbase Multisig</a><br>
 <a href="https://xapo.com">XAPO</a><br>
 <a href="https://kraken.com">Kraken</a><br>
 <a href="https://gemini.com">Gemini</a><br>
