--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ tt=display_c();
 <a href="https://www.blockonomics.co">Blockonomics.co</a><br>
 </p>
 <p><b>Charts:</b><br>
+<a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a><br>
 <a href="https://cryptowat.ch/btce/ltcbtc/5min">Litecoin</a><br>
 </p>
 <p><b>Online:</b><br>
@@ -47,7 +48,7 @@ tt=display_c();
 <a href="https://kraken.com">Kraken</a><br>
 <a href="https://gemini.com">Gemini</a><br>
 <a href="https://lamassu.is">Lamassu</a><br>
-<a href="https://robocoin.com">Robocoin</a><br>
+<a href="https://circle.com">Circle</a><br>
 <a href="https://ripple.com">Ripple</a><br>
 </p>
   </body>
