--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ tt=display_c();
 </p>
 <p><b>Charts:</b><br>
 <a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a><br>
-<a href="https://cryptowat.ch/btce/ltcbtc/5min">Litecoin</a><br>
+<a href="https://cryptowat.ch/btce/ltcbtc/5min">LTC/BTC</a><br>
+<a href="https://whaleclub.co">Whale</a><br>
 </p>
 <p><b>Online:</b><br>
 <a href="https://bitpay.com/tour">BitPay</a><br>
