--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ tt=display_c();
 <a href="https://lamassu.is">Lamassu</a><br>
 <a href="https://circle.com">Circle</a><br>
 <a href="https://ripple.com">Ripple</a><br>
+<a href="https://btc-e.com">BTC-E</a><br>
+</p>
+<p><b>Russia:</b><br>
+<a href="https://bitcoinembassy.ru">Bitcoin Embassy Moscow</a><br>
 </p>
   </body>
   
