--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ tt=display_c();
 <a href="https://btc-e.com">BTC-E</a><br>
 </p>
 <p><b>Russia:</b><br>
-<a href="https://bitcoinembassy.ru">Bitcoin Embassy Moscow</a><br>
+<a href="http://bitcoinembassy.ru">Bitcoin Embassy Moscow</a><br>
 </p>
   </body>
   
