--- a/vault.html
+++ b/vault.html
@@ -2,19 +2,19 @@
 <html xmlns:fb="http://ogp.me/ns/fb#">
 <head>
   <title>
-      Multisig Vault - Coinbase
+      BlowStamp
   </title>
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
     <meta property="og:image" content="https://www.coinbase.com/img/og-home.jpg" />
-    <meta property="og:title" content="Coinbase - Buy and Sell Bitcoin" />
+    <meta property="og:title" content="BlowStamp" />
     <meta property="og:description" content="The easiest way to buy, use, and accept bitcoin. Using bitcoin has never been so safe and easy." />
   <meta name="twitter:card" content="coinbase_twitter_image">
   <meta name="twitter:image:src" content="https://www.coinbase.com/img/og-home.jpg">
-  <meta name="twitter:site" content="@coinbase">
+  <meta name="twitter:site" content="@">
   <meta name="twitter:description" content="The easiest way to buy, use, and accept bitcoin. Using bitcoin has never been so safe and easy.">
-  <meta name="twitter:title" content="Buy and Sell Bitcoin | Coinbase">
+  <meta name="twitter:title" content="Buy and Sell Bitcoin | BlowStamp">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="R7G5THr8xgaHFkTNkr_RUB0HvX2Nf8e4qnWi0X1kmz8" />
@@ -31,7 +31,7 @@
   <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="iE25kh3Vue0dBeU/PL+naNsQ5lVidjIeUdXdm6OzNrqxT0Qj9hqeRbFsYn+mkGp9A5ViLP4L1tK2g475NSAvmw==" />
    <meta property="og:image" content="https://www.coinbase.com/assets/vault/og-multisig-fe7f4b32d981465ff3df70c8efe7dcb60f91b02d55719df893fc178283745e20.jpg"/>
- <meta property="og:title" content="Multisig Vault - Coinbase"/>
+ <meta property="og:title" content="Multisig Vault - BlowStamp"/>
  <meta property="og:description" content="The easiest and most secure multisig vault yet. Create a 3-key multisig vault for your bitcoin in minutes."/>
 
 
@@ -94,7 +94,7 @@
 <section id="intro">
   <div class="fadeIn animated intro-content">
     <h1>
-      Multisig Vault
+      BlowStamp
     </h1>
     <p>
       The easiest and most secure multisig vault ever.
