--- a/vault.html
+++ b/vault.html
@@ -139,7 +139,7 @@
     </ul>
   </div>
   <div class="span6">
-    <img src="https://www.coinbase.com/assets/vault/multisig-create-94e7c742f80d27ce62ffd0a3770049830bbe9ede05496a853a1afe4dbfc6d15f.png" alt="Multisig create 94e7c742f80d27ce62ffd0a3770049830bbe9ede05496a853a1afe4dbfc6d15f" />
+    <img src="http://f.cl.ly/items/161k0B380J352O151i0m/vs-ideal-fit.png" alt="Multisig" />
   </div>
 </section>
 
