--- a/vault.html
+++ b/vault.html
@@ -226,15 +226,16 @@
     <div class="row-fluid">
       <div class="span2">
         <a href="/" class="brand"><img alt="Coinbase" src="https://www.coinbase.com/assets/logos/logo@2x-93fcfabc4396f33d908a9578b4f95f5189ad23664937872fc367746be10fbde9.png" /></a>
-        <small><span>&copy; 2015 Coinbase</span></small>
+        <small><span>&copy; 2015 BlowStamp</span></small>
       </div>
       <div class="span2">
-        <h4>Products</h4>
+        <h4>API</h4>
         <nav>
-          <a href="/home">Buy/Sell Bitcoin</a>
-          <a href="https://exchange.coinbase.com">Exchange</a>
-          <a href="https://developers.coinbase.com">Developer Platform</a>
-          <a href="/merchants">Merchant Tools</a>
+          <a href="https://explorer.chain.com">Chain.com</a>
+<a href="https://chain.com/docs">Chain API docs</a>
+<a href="https://developers.coinbase.com">Coinbase developers</a>
+<a href="https://blockchain.info">Blockchain.info</a>
+<a href="https://insight.bitpay.com">insight by BitPay</a>
         </nav>
       </div>
       <div class="span2">
