--- a/vault.html
+++ b/vault.html
@@ -231,40 +231,42 @@
       <div class="span2">
         <h4>API</h4>
         <nav>
-          <a href="https://explorer.chain.com">Chain.com</a>
-<a href="https://chain.com/docs">Chain API docs</a>
+<a href="https://exchange.coinbase.com">Coinbase Exchange NYSE</a>
 <a href="https://developers.coinbase.com">Coinbase developers</a>
+<a href="https://chain.com/docs">Chain API docs</a>
 <a href="https://blockchain.info">Blockchain.info</a>
 <a href="https://insight.bitpay.com">insight by BitPay</a>
+<a href="https://www.blockonomics.co">Blockonomics.co</a>
         </nav>
       </div>
       <div class="span2">
-        <h4>Learn</h4>
+        <h4>Charts</h4>
         <nav>
-          <a href="/what-is-bitcoin">What Is Bitcoin?</a>
-          <a href="/global">Supported Countries</a>
-          <a href="/buy-bitcoin">Buy Bitcoin</a>
-
-
-          <a href="http://status.coinbase.com">Status</a>
+<a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a><br>
+<a href="https://cryptowat.ch/btce/ltcbtc/5min">LTC/BTC</a><br>
+<a href="https://whaleclub.co">Whale</a><br>
+<a href="http://status.coinbase.com">Status</a>
         </nav>
       </div>
       <div class="span2">
-        <h4>Company</h4>
+        <h4>Companies</h4>
         <nav>
-          <a href="/about">About</a>
-          <a href="/careers">Careers</a>
-          <a href="/press">Press</a>
-          <a href="/legal/user_agreement">Legal &amp; Privacy</a>
+<a href="https://bitpay.com/tour">BitPay</a>
+<a href="https://www.coinbase.com">Coinbase</a>
+<a href="https://www.coinbase.com/vault">Coinbase Vault</a>
+<a href="https://www.coinbase.com/multisig">Coinbase Multisig</a>
+<a href="https://xapo.com">XAPO</a>
+<a href="https://kraken.com">Kraken</a>
         </nav>
       </div>
        <div class="span2">
-        <h4>Social</h4>
+        <h4>Companies</h4>
         <nav>
-          <a href="http://blog.coinbase.com">Blog</a>
-          <a href="http://community.coinbase.com">Community</a>
-          <a href="https://twitter.com/coinbase">Twitter</a>
-          <a href="https://www.facebook.com/Coinbase">Facebook</a>
+<a href="https://gemini.com">Gemini</a>
+<a href="https://lamassu.is">Lamassu</a>
+<a href="https://circle.com">Circle</a>
+<a href="https://ripple.com">Ripple</a>
+<a href="https://btc-e.com">BTC-E</a>
         </nav>
       </div>
       <div class="span2">
