--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <section id="intro">
   <div class="fadeIn animated intro-content">
     <h1>
-      BlowStamp
+      Vadim
     </h1>
     <p>
       The easiest and most secure multisig vault ever.
@@ -242,10 +242,9 @@
       <div class="span2">
         <h4>Charts</h4>
         <nav>
-<a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a><br>
-<a href="https://cryptowat.ch/btce/ltcbtc/5min">LTC/BTC</a><br>
-<a href="https://whaleclub.co">Whale</a><br>
-<a href="http://status.coinbase.com">Status</a>
+<a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a>
+<a href="https://cryptowat.ch/btce/ltcbtc/5min">LTC/BTC</a>
+<a href="https://whaleclub.co">Whale</a>
         </nav>
       </div>
       <div class="span2">
