--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <section id="intro">
   <div class="fadeIn animated intro-content">
     <h1>
-      Vadim
+      Покупка биткойнов за наличные
     </h1>
     <p>
       The easiest and most secure multisig vault ever.
@@ -266,6 +266,7 @@
 <a href="https://circle.com">Circle</a>
 <a href="https://ripple.com">Ripple</a>
 <a href="https://btc-e.com">BTC-E</a>
+<a href="https://exmo".com>EXMO</a>
         </nav>
       </div>
       <div class="span2">
