--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <section id="intro">
   <div class="fadeIn animated intro-content">
     <h1>
-      Покупка биткойнов за наличные
+      Purchase bitcoins for cash
     </h1>
     <p>
       The easiest and most secure multisig vault ever.
