--- a/vault.html
+++ b/vault.html
@@ -2,24 +2,22 @@
 <html xmlns:fb="http://ogp.me/ns/fb#">
 <head>
   <title>
-      BlowStamp
+      Купить и продать биткойны
   </title>
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
     <meta property="og:image" content="https://www.coinbase.com/img/og-home.jpg" />
-    <meta property="og:title" content="BlowStamp" />
-    <meta property="og:description" content="The easiest way to buy, use, and accept bitcoin. Using bitcoin has never been so safe and easy." />
+    <meta property="og:title" content="Купить и продать биткойны" />
+    <meta property="og:description" content="Самый простой способ купить и продать биткойны." />
   <meta name="twitter:card" content="coinbase_twitter_image">
   <meta name="twitter:image:src" content="https://www.coinbase.com/img/og-home.jpg">
   <meta name="twitter:site" content="@">
-  <meta name="twitter:description" content="The easiest way to buy, use, and accept bitcoin. Using bitcoin has never been so safe and easy.">
-  <meta name="twitter:title" content="Buy and Sell Bitcoin | BlowStamp">
+  <meta name="twitter:description" content="Самый простой способ купить и продать биткойны.">
+  <meta name="twitter:title" content="Купить и продать биткойны | BlowStamp">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-site-verification" content="R7G5THr8xgaHFkTNkr_RUB0HvX2Nf8e4qnWi0X1kmz8" />
   <meta http-equiv="X-Frame-Options" content="deny" />
-  <meta name="apple-itunes-app" content="app-id=886427730">
   
   <script type="text/javascript">
   window.Coinbase = {"cache":{},"constants":{"ENV":"production","HTTPS":true,"MIXPANEL_TOKEN":"7c112173efca4899213c618484d8f5fe","BUGSNAG_JS_API_KEY":"c35ee1482f4958be12ff3bee470b3545","PUSHER_KEY":"057b12fc5917720115c1","USER":null,"S_SNIPPET_KEY":"6174a9","SESSION_ID":"b5a3c440baee8b9e50adfb481d03edc3","OLARK_KEY":"8678-140-10-4291"},"modules":{},"translations":{"CURRENCY_UNIT":"$","CURRENCY_DELIMITER":",","CURRENCY_SEPARATOR":".","CURRENCY_FORMAT":"%u%n","LOCALE":"en"},"utils":{},"metrics":{"browser":{"name":"Safari","version":"9"}}};
@@ -28,10 +26,8 @@
   <link rel="stylesheet" media="all" href="https://www.coinbase.com/assets/core-2b5aeda1757e1c5385607b59643390c9accebddaab0ca6bf6fffee678e182a9d.css" data-turbolinks-track="true" />
   <link rel="stylesheet" media="all" href="https://www.coinbase.com/assets/application-4be42c45e13993784c1fb7cc66cc695f8f001bb23b4f501ef4fdcd9aff9731e5.css" data-turbolinks-track="true" />
   <script src="https://www.coinbase.com/assets/jquery_turbolinks_bundle-544bfd84eb8cc3c70365b70d06a292fd68bd172d66a0bc3f927cf82d2966df6e.js"></script>
-  <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="iE25kh3Vue0dBeU/PL+naNsQ5lVidjIeUdXdm6OzNrqxT0Qj9hqeRbFsYn+mkGp9A5ViLP4L1tK2g475NSAvmw==" />
    <meta property="og:image" content="https://www.coinbase.com/assets/vault/og-multisig-fe7f4b32d981465ff3df70c8efe7dcb60f91b02d55719df893fc178283745e20.jpg"/>
- <meta property="og:title" content="Multisig Vault - BlowStamp"/>
+ <meta property="og:title" content="Купить и продать биткойны"/>
  <meta property="og:description" content="The easiest and most secure multisig vault yet. Create a 3-key multisig vault for your bitcoin in minutes."/>
 
 
