--- a/buy.html
+++ b/buy.html
@@ -72,7 +72,7 @@
         <ul class="nav clearfix">
               <li class='top-balance'>
                 <a href="/charts">
-                  1 BTC = $236.50
+                  1 BTC = $239.55
 </a>              </li>
             <li class=" signin"><a href="/signin">Sign In</a></li>
             <li style="margin-top:-1px" class=" signup"><a href="/signup" class="btn">Sign Up</a></li>
@@ -90,11 +90,11 @@
 <section id="intro">
   <div class="fadeIn animated intro-content">
     <h1>
-      Purchase bitcoins for cash
+      Купить и продать биткойны
     </h1>
     <p>
-      The easiest and most secure multisig vault ever.
-      Take complete control of your bitcoin in minutes.
+      Самый простой и наиболее безопасный способ купить биткойны.
+      Решите вопрос в течение нескольких минут.
     </p>
     <p>
       <form class="new_account" id="new_account" action="/accounts" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" />
