--- a/buy.html
+++ b/buy.html
@@ -93,7 +93,7 @@
       Купить и продать биткойны
     </h1>
     <p>
-      Самый простой и наиболее безопасный способ купить биткойны.
+      Самый простой и безопасный способ.
       Решите вопрос в течение нескольких минут.
     </p>
     <p>
@@ -108,13 +108,13 @@
 <div class="subnav" id="nav">
   <ul class="nav">
     <li>
-      <a href="/vault">
-      Coinbase Vault
+      <a href="/buy" class="active">
+      Купить биткойны
       </a>
     </li>
     <li>
-      <a href="/multisig" class="active">
-      Multisig Vault
+      <a href="/sell">
+      Продать биткойны
       </a>
     </li>
   </ul>
@@ -122,8 +122,8 @@
 
 <section id="features" class="container">
   <div class="span6">
-    <h2>Store your own private keys.</h2>
-    <p>You can create a multisig vault in minutes, just like you would a regular vault or wallet. The difference is that you&#39;re in total control of your private keys.</p>
+    <h2>Полная безопасность.</h2>
+    <p>Храните свои закрытые ключи у себя. You can create a multisig vault in minutes, just like you would a regular vault or wallet. The difference is that you&#39;re in total control of your private keys.</p>
 
     <h5>Main features</h5>
     <ul>
