--- a/buy.html
+++ b/buy.html
@@ -93,14 +93,14 @@
       Купить и продать биткойны
     </h1>
     <p>
-      Самый простой и безопасный способ.
+      Самый простой и безопасный способ.<br>
       Решите вопрос в течение нескольких минут.
     </p>
     <p>
       <form class="new_account" id="new_account" action="/accounts" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" />
         <input value="vault" type="hidden" name="account[type]" id="account_type" />
-        <input type="submit" name="commit" value="Create Your Vault" data-disable-with="Please Wait ..." class="btn" />
-</form>      <a href="#features">Learn More</a>
+        <input type="submit" name="commit" value="Связаться" data-disable-with="Соединяю ..." class="btn" />
+</form>      <a href="#features">Подробнее</a>
     </p>
   </div>
 </section>
