--- a/buy.html
+++ b/buy.html
@@ -57,15 +57,15 @@
       <div class="nav-collapse" id="application_menu">
           <ul class="nav clearfix">
               <li class="dropdown dropdown-hover" id="resources_menu">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <b class='caret'></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Продукты <b class='caret'></b></a>
                 <ul class="dropdown-menu fadeIn animated-fast" role="menu" aria-labelledby="dLabel">
-                  <li class="home"><a href="/home">Buy/Sell Bitcoin</a></li>
-                  <li><a href="https://exchange.coinbase.com" class="external-link">Exchange</a></li>
-                  <li><a href="https://developers.coinbase.com" class="external-link">Developer Platform</a></li>
-                  <li><a href="/merchants">Merchant Tools</a></li>
+                  <li class="home"><a href="/home">Покупка/Продажа биткойнов</a></li>
+                  <li><a href="https://exchange.coinbase.com" class="external-link">Биржа</a></li>
+                  <li><a href="https://developers.coinbase.com" class="external-link">Разработки</a></li>
+                  <li><a href="/merchants">Коммерция</a></li>
                 </ul>
               </li>
-              <li><a href="/help" target="_blank">Help</a></li>
+              <li><a href="/help" target="_blank">Помощь</a></li>
 
           </ul>
 
@@ -74,8 +74,8 @@
                 <a href="/charts">
                   1 BTC = $239.55
 </a>              </li>
-            <li class=" signin"><a href="/signin">Sign In</a></li>
-            <li style="margin-top:-1px" class=" signup"><a href="/signup" class="btn">Sign Up</a></li>
+            <li class=" signin"><a href="/signin">Вход</a></li>
+            <li style="margin-top:-1px" class=" signup"><a href="/signup" class="btn">Регистрация</a></li>
         </ul>
       </div>
     </div>
@@ -123,15 +123,15 @@
 <section id="features" class="container">
   <div class="span6">
     <h2>Полная безопасность.</h2>
-    <p>Храните свои закрытые ключи у себя. You can create a multisig vault in minutes, just like you would a regular vault or wallet. The difference is that you&#39;re in total control of your private keys.</p>
+    <p>Храните свои закрытые ключи у себя.</p>
 
     <h5>Main features</h5>
     <ul>
-      <li>You control the majority of the keys</li>
-      <li>Keys are created and encrypted in the browser</li>
-      <li>Send bitcoin with ease using only your password</li>
-      <li>Buy bitcoin directly into the vault</li>
-      <li>Invite up to 5 co-signers to a group vault</li>
+      <li>Вы контролируете все ключи</li>
+      <li>Ключи создаются и шифруются на ваших устройствах</li>
+      <li>Биткойны отправляются Вам сразу же</li>
+      <li>Покупайте биткойны напрямую в хранилище</li>
+      <li>Кошельки с мультиподписью</li>
     </ul>
   </div>
   <div class="span6">
@@ -142,9 +142,9 @@
 <hr>
 
 <section id="keys" class="container">
-  <h2>How does it work?</h2>
+  <h2>Как всё работает?</h2>
   <p class="lead">
-    We built the most secure and resilient solution possible. The 3-key architecture allows ease of use, easy backups, full security and complete control.
+    Мы отработали самый безопасное и устройчивое из возможных решений. The 3-key architecture allows ease of use, easy backups, full security and complete control.
   </p>
   <div>
     <div class="full">
@@ -236,7 +236,7 @@
         </nav>
       </div>
       <div class="span2">
-        <h4>Charts</h4>
+        <h4>Мониторинг</h4>
         <nav>
 <a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a>
 <a href="https://cryptowat.ch/btce/ltcbtc/5min">LTC/BTC</a>
@@ -244,7 +244,7 @@
         </nav>
       </div>
       <div class="span2">
-        <h4>Companies</h4>
+        <h4>Инфраструктура</h4>
         <nav>
 <a href="https://bitpay.com/tour">BitPay</a>
 <a href="https://www.coinbase.com">Coinbase</a>
@@ -255,7 +255,7 @@
         </nav>
       </div>
        <div class="span2">
-        <h4>Companies</h4>
+        <h4>Инфраструктура</h4>
         <nav>
 <a href="https://gemini.com">Gemini</a>
 <a href="https://lamassu.is">Lamassu</a>
