--- a/buy.html
+++ b/buy.html
@@ -123,15 +123,15 @@
 <section id="features" class="container">
   <div class="span6">
     <h2>Полная безопасность.</h2>
-    <p>Храните свои закрытые ключи у себя.</p>
+    <p>Важно не только приобрести, но и правильно хранить ваше богатство.</p>
 
-    <h5>Main features</h5>
+    <h5>Главные особенности</h5>
     <ul>
       <li>Вы контролируете все ключи</li>
       <li>Ключи создаются и шифруются на ваших устройствах</li>
       <li>Биткойны отправляются Вам сразу же</li>
       <li>Покупайте биткойны напрямую в хранилище</li>
-      <li>Кошельки с мультиподписью</li>
+      <li>Хранилище с мультиподписью</li>
     </ul>
   </div>
   <div class="span6">
@@ -176,32 +176,32 @@
 
 <hr>
 <section id="details" class="container">
-  <h2>We designed the multisig vault to be private, secure, and resilient.</h2>
+  <h2>Мы разработали хранилище с мультиподписью: частное, безопасное, устройчивое.</h2>
   <div class="row">
     <div class="span4 control">
-      <h4>You&#39;re in control</h4>
+      <h4>Всё под вашим контролем</h4>
       <p>You can backup your User and Shared keys on paper or on your computer. The Shared key is encrypted in your browser with your password. Coinbase never has access to your password or User key.</p>
     </div>
     <div class="span4 trust">
-      <h4>Trustless solution</h4>
+      <h4>Не требует доверия</h4>
       <p>Coinbase does not have access to any bitcoin stored in the multisig vault. You can send your bitcoin without using Coinbase through our open-source recovery tool.</p>
     </div>
     <div class="span4 feature">
-      <h4>Feature full</h4>
+      <h4>Полноценное решение</h4>
       <p>Buy bitcoin directly into the multisig vault and secure it with multiple signers. Once the purchase is complete you&#39;re instantly in complete control of the bitcoin.</p>
     </div>
   </div>
   <div class="row">
     <div class="span4 free">
-      <h4>Free to use</h4>
+      <h4>Предоставляем бесплатно</h4>
       <p>The Multisig Vault is free to use and always will be. We believe you should always have the option to control your bitcoin.</p>
     </div>
     <div class="span4 private">
-      <h4>Private and secure</h4>
+      <h4>Частное и безопасное</h4>
       <p>We generate a new multisig address for every transaction. You should never have to sacrifice privacy for security.</p>
     </div>
     <div class="span4 easy">
-      <h4>Easy to use</h4>
+      <h4>Легко использовать</h4>
       <p>Cryptography is hard. Take advantage of the Bitcoin protocol without having to be a security expert.</p>
     </div>
   </div>
