--- a/buy.html
+++ b/buy.html
@@ -221,7 +221,7 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span2">
-        <a href="/" class="brand"><img alt="Coinbase" src="https://www.coinbase.com/assets/logos/logo@2x-93fcfabc4396f33d908a9578b4f95f5189ad23664937872fc367746be10fbde9.png" /></a>
+        <a href="/" class="brand"><img alt="Coinbase" src="http://f.cl.ly/items/1S1K2T0W120D423K3G1w/blowstamp-logo.png" /></a>
         <small><span>&copy; 2015 BlowStamp</span></small>
       </div>
       <div class="span2">
