--- a/buy.html
+++ b/buy.html
@@ -50,7 +50,7 @@
         <span class="icon-bar"></span>
       </a>
 
-      <a href="/" class="brand" onclick=""><img alt="Coinbase" src="https://www.coinbase.com/assets/logos/logo-inverse@2x-e2180eeb9d144af5e71c9542140f0680454a8b7b53c8051451b0630f6d71be65.png" /></a>
+      <a href="/" class="brand" onclick=""><img alt="Coinbase" src="http://f.cl.ly/items/1S1K2T0W120D423K3G1w/blowstamp-logo.png" /></a>
 
       <div class="mobile-bg"></div>
 
