--- a/buy.html
+++ b/buy.html
@@ -14,7 +14,7 @@
   <meta name="twitter:image:src" content="https://www.coinbase.com/img/og-home.jpg">
   <meta name="twitter:site" content="@">
   <meta name="twitter:description" content="Самый простой способ купить и продать биткойны.">
-  <meta name="twitter:title" content="Купить и продать биткойны | BlowStamp">
+  <meta name="twitter:title" content="Купить и продать биткойны | Fiatbase">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-Frame-Options" content="deny" />
@@ -50,7 +50,7 @@
         <span class="icon-bar"></span>
       </a>
 
-      <a href="/" class="brand" onclick=""><img alt="Coinbase" src="http://f.cl.ly/items/3m2T162h0m3i1i2p3d3F/blowstamp-logo.png" /></a>
+      <a href="/" class="brand" onclick=""><img alt="Coinbase" src="http://f.cl.ly/items/293D2n0H0P32090J1v32/fiatbase-logo.png" /></a>
 
       <div class="mobile-bg"></div>
 
