--- a/buy.html
+++ b/buy.html
@@ -135,7 +135,7 @@
     </ul>
   </div>
   <div class="span6">
-    <img src="http://f.cl.ly/items/161k0B380J352O151i0m/vs-ideal-fit.png" alt="Multisig" />
+    <img src="http://snohetta.com/uploads/project/136/max_ff7a21ff3eb3a994a36391edcc9cdf87.jpg" alt="Multisig" />
   </div>
 </section>
 
