--- a/buy.html
+++ b/buy.html
@@ -221,7 +221,7 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span2">
-        <a href="/" class="brand"><img alt="Coinbase" src="http://f.cl.ly/items/1S1K2T0W120D423K3G1w/blowstamp-logo.png" /></a>
+        <a href="/" class="brand"><img alt="Coinbase" src="http://f.cl.ly/items/293D2n0H0P32090J1v32/fiatbase-logo.png" /></a>
         <small><span>&copy; 2015 BlowStamp</span></small>
       </div>
       <div class="span2">
@@ -262,7 +262,7 @@
 <a href="https://circle.com">Circle</a>
 <a href="https://ripple.com">Ripple</a>
 <a href="https://btc-e.com">BTC-E</a>
-<a href="https://exmo".com>EXMO</a>
+<a href="https://exmo.com">EXMO</a>
         </nav>
       </div>
       <div class="span2">
