--- a/buy.html
+++ b/buy.html
@@ -24,7 +24,7 @@
 </script>
 
   <link rel="stylesheet" media="all" href="https://www.coinbase.com/assets/core-2b5aeda1757e1c5385607b59643390c9accebddaab0ca6bf6fffee678e182a9d.css" data-turbolinks-track="true" />
-  <link rel="stylesheet" media="all" href="https://www.coinbase.com/assets/application-4be42c45e13993784c1fb7cc66cc695f8f001bb23b4f501ef4fdcd9aff9731e5.css" data-turbolinks-track="true" />
+  <link rel="stylesheet" media="all" href="bs.css" data-turbolinks-track="true" />
   <script src="https://www.coinbase.com/assets/jquery_turbolinks_bundle-544bfd84eb8cc3c70365b70d06a292fd68bd172d66a0bc3f927cf82d2966df6e.js"></script>
    <meta property="og:image" content="https://www.coinbase.com/assets/vault/og-multisig-fe7f4b32d981465ff3df70c8efe7dcb60f91b02d55719df893fc178283745e20.jpg"/>
  <meta property="og:title" content="Купить и продать биткойны"/>
