--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ tt=display_c();
 </p>
 <p><b>Russia:</b><br>
 <a href="http://bitcoinembassy.ru">Bitcoin Embassy Moscow</a><br>
+<a href="https://github.com/blowstamp/blowstamp.github.io/edit/master/index.html">GitHub edit</a><br>
 </p>
   </body>
   
