--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ tt=display_c();
 <a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a><br>
 <a href="https://cryptowat.ch/btce/ltcbtc/5min">LTCBTC</a><br>
 <a href="https://whaleclub.co">Whale</a><br>
-<a href="http://www.investing.com/currencies/usd-rub>Investing USDRUB</a><br>
+<a href="http://www.investing.com/currencies/usd-rub">Investing USDRUB</a><br>
 </p>
 <p><b>Brokerage:</b><br>
 <a href="https://robinhood.com">Robinhood</a><br>
