--- a/m.html
+++ b/m.html
@@ -18,8 +18,8 @@
   window.Coinbase = {"cache":{},"constants":{"ENV":"production","HTTPS":true,"MIXPANEL_TOKEN":"7c112173efca4899213c618484d8f5fe","BUGSNAG_JS_API_KEY":"c35ee1482f4958be12ff3bee470b3545","PUSHER_KEY":"057b12fc5917720115c1","USER":null,"S_SNIPPET_KEY":"6174a9","SESSION_ID":"442bcf6dbed506e7bcbccc0b5a2e8558","OLARK_KEY":"8678-140-10-4291"},"modules":{},"translations":{"CURRENCY_UNIT":"$","CURRENCY_DELIMITER":",","CURRENCY_SEPARATOR":".","CURRENCY_FORMAT":"%u%n","LOCALE":"en"},"utils":{},"metrics":{"browser":{"name":"Safari","version":"9"}}};
 </script>
 
-  <link rel="stylesheet" media="all" href="https://www.coinbase.com/assets/core-2b5aeda1757e1c5385607b59643390c9accebddaab0ca6bf6fffee678e182a9d.css" data-turbolinks-track="true" />
-  <link rel="stylesheet" media="all" href="https://www.coinbase.com/assets/application-4f2e97ae082058d30f0b2339ee54d2a761daad5cf24fd6ccb28714059df16364.css" data-turbolinks-track="true" />
+  <link rel="stylesheet" media="all" href="bs0.css" data-turbolinks-track="true" />
+  <link rel="stylesheet" media="all" href="bs1.css" data-turbolinks-track="true" />
   <script src="https://www.coinbase.com/assets/jquery_turbolinks_bundle-544bfd84eb8cc3c70365b70d06a292fd68bd172d66a0bc3f927cf82d2966df6e.js"></script>
   <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="fRm7xTC2B76LJGS4XGeaJaxVcx2orkUK/UItAgdYF/LuAi4U7BrHjk2Q5F4fF9eO1OvyZzuUeGFCpSS3/7nNtA==" />
