--- a/0.html
+++ b/0.html
@@ -13,8 +13,8 @@
   <meta property="og:description" content="The easiest way to buy, use, and accept bitcoin" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-Frame-Options" content="deny" />
-  <link rel="stylesheet" href="/assets/core.css" media="screen" />
-  <link rel="stylesheet" href="/assets/application.css" media="screen" />
+  <link rel="stylesheet" href="core.css" media="screen" />
+  <link rel="stylesheet" href="application.css" media="screen" />
 </head>
 <body class="app static error404">
   <div class="page-container">
