--- a/buy.html
+++ b/buy.html
@@ -23,8 +23,8 @@
   window.Coinbase = {"cache":{},"constants":{"ENV":"production","HTTPS":true,"MIXPANEL_TOKEN":"7c112173efca4899213c618484d8f5fe","BUGSNAG_JS_API_KEY":"c35ee1482f4958be12ff3bee470b3545","PUSHER_KEY":"057b12fc5917720115c1","USER":null,"S_SNIPPET_KEY":"6174a9","SESSION_ID":"b5a3c440baee8b9e50adfb481d03edc3","OLARK_KEY":"8678-140-10-4291"},"modules":{},"translations":{"CURRENCY_UNIT":"$","CURRENCY_DELIMITER":",","CURRENCY_SEPARATOR":".","CURRENCY_FORMAT":"%u%n","LOCALE":"en"},"utils":{},"metrics":{"browser":{"name":"Safari","version":"9"}}};
 </script>
 
-  <link rel="stylesheet" media="all" href="bs0.css" data-turbolinks-track="true" />
-  <link rel="stylesheet" media="all" href="bs1.css" data-turbolinks-track="true" />
+  <link rel="stylesheet" media="all" href="core.css" data-turbolinks-track="true" />
+  <link rel="stylesheet" media="all" href="application.css" data-turbolinks-track="true" />
   <script src="https://www.coinbase.com/assets/jquery_turbolinks_bundle-544bfd84eb8cc3c70365b70d06a292fd68bd172d66a0bc3f927cf82d2966df6e.js"></script>
    <meta property="og:image" content="https://www.coinbase.com/assets/vault/og-multisig-fe7f4b32d981465ff3df70c8efe7dcb60f91b02d55719df893fc178283745e20.jpg"/>
  <meta property="og:title" content="Купить и продать биткойны"/>
