--- a/bits.html
+++ b/bits.html
@@ -10,11 +10,6 @@
     <meta property="og:image" content="https://www.coinbase.com/img/og-home.jpg" />
     <meta property="og:title" content="Купить и продать биткойны" />
     <meta property="og:description" content="Самый простой способ купить и продать биткойны." />
-  <meta name="twitter:card" content="coinbase_twitter_image">
-  <meta name="twitter:image:src" content="https://www.coinbase.com/img/og-home.jpg">
-  <meta name="twitter:site" content="@">
-  <meta name="twitter:description" content="Самый простой способ купить и продать биткойны.">
-  <meta name="twitter:title" content="Купить и продать биткойны | BlowStamp">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-Frame-Options" content="deny" />
@@ -129,7 +124,7 @@
       <li>Вы контролируете все ключи</li>
       <li>Ключи создаются и шифруются на ваших устройствах</li>
       <li>Биткойны отправляются Вам сразу же</li>
-      <li>Покупайте биткойны напрямую в хранилище</li>
+      <li>Покупайте биткойны напрямую в своё хранилище</li>
       <li>Хранилище с мультиподписью</li>
     </ul>
   </div>
@@ -143,7 +138,7 @@
 <section id="keys" class="container">
   <h2>Как всё работает?</h2>
   <p class="lead">
-    Мы отработали самый безопасное и устройчивое из возможных решений. The 3-key architecture allows ease of use, easy backups, full security and complete control.
+    Мы отработали самый безопасное и устройчивое из возможных решений. Простая архитектура, обеспечивающая лёгкость использования, лёгкие резервные копии, полная безопасность и контроль.
   </p>
   <div>
     <div class="full">
@@ -175,7 +170,7 @@
 
 <hr>
 <section id="details" class="container">
-  <h2>Мы разработали хранилище с мультиподписью: частное, безопасное, устройчивое.</h2>
+  <h2>Мы разработали хранилище с мультиподписью: частное, безопасное, устойчивое.</h2>
   <div class="row">
     <div class="span4 control">
       <h4>Всё под вашим контролем</h4>
@@ -267,8 +262,10 @@
       <div class="span2">
         <div class="footer-locale-select">
   <h4>Language</h4>
-  <p><select name="locale" id="locale_select"><option value="de">Deutsch</option>
-<option selected="selected" value="en">English</option>
+  <p><select name="locale" id="locale_select">
+<option selected="selected" value="en">Русский</option>
+<option value="en">English</option>
+<option value="de">Deutsch</option>
 <option value="es">Español</option>
 <option value="fr">Français</option>
 <option value="it">Italiano</option>
