--- a/bits.html
+++ b/bits.html
@@ -138,7 +138,7 @@
 <section id="keys" class="container">
   <h2>Как всё работает?</h2>
   <p class="lead">
-    Мы отработали самый безопасное и устройчивое из возможных решений. Простая архитектура, обеспечивающая лёгкость использования, лёгкие резервные копии, полная безопасность и контроль.
+    Мы отработали самый безопасное и устройчивое из возможных решений. Простая архитектура, обеспечивающая лёгкость использования, лёгкие резервные копии, полную безопасность и контроль.
   </p>
   <div>
     <div class="full">
