Update and rename bits.html to vault.html

--- a/vault.html
+++ b/vault.html
@@ -4,7 +4,7 @@
   <title>
       Купить и продать биткойны
   </title>
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="http://f.cl.ly/items/1M0V3d0U0j3m0g2S3e3V/favicon.ico" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
     <meta property="og:image" content="https://www.coinbase.com/img/og-home.jpg" />
@@ -102,13 +102,13 @@
 <div class="subnav" id="nav">
   <ul class="nav">
     <li>
-      <a href="/buy" class="active">
-      Купить биткойны
+      <a href="/buy-sell-bitcoin">
+      Покупка/продажа
       </a>
     </li>
     <li>
-      <a href="/sell">
-      Продать биткойны
+      <a href="/bitcoin-vault" class="active">
+      Хранение
       </a>
     </li>
   </ul>
@@ -242,16 +242,14 @@
         <nav>
 <a href="https://bitpay.com/tour">BitPay</a>
 <a href="https://www.coinbase.com">Coinbase</a>
-<a href="https://www.coinbase.com/vault">Coinbase Vault</a>
-<a href="https://www.coinbase.com/multisig">Coinbase Multisig</a>
 <a href="https://xapo.com">XAPO</a>
 <a href="https://kraken.com">Kraken</a>
+<a href="https://gemini.com">Gemini</a>
         </nav>
       </div>
        <div class="span2">
         <h4>Инфраструктура</h4>
         <nav>
-<a href="https://gemini.com">Gemini</a>
 <a href="https://lamassu.is">Lamassu</a>
 <a href="https://circle.com">Circle</a>
 <a href="https://ripple.com">Ripple</a>
@@ -278,14 +276,6 @@
     </div>
   </div>
 </footer>
-
-
-
-<script type="text/javascript">
-  Coinbase.exchangeRatesGlobal = null;
-
-</script>
-
 
 </body>
 </html>
