--- a/vault.html
+++ b/vault.html
@@ -142,7 +142,7 @@
   </p>
   <div>
     <div class="full">
-      <p>Use to recover if your password is lost.</p>
+      <p>Вы полностью защищены</p>
     </div>
     <div class="two">
       <img src="https://www.coinbase.com/assets/vault/multisig-cbkey-e7db4226ccdccefa89fc10b4b7282efebbe0c76e279e0e0dbb39165712d6d35a.png" alt="Multisig cbkey e7db4226ccdccefa89fc10b4b7282efebbe0c76e279e0e0dbb39165712d6d35a" />
@@ -221,12 +221,11 @@
       <div class="span2">
         <h4>API</h4>
         <nav>
-<a href="https://exchange.coinbase.com">Coinbase Exchange NYSE</a>
-<a href="https://developers.coinbase.com">Coinbase developers</a>
-<a href="https://chain.com/docs">Chain API docs</a>
 <a href="https://blockchain.info">Blockchain.info</a>
+<a href="https://exchange.coinbase.com">Exchange (NYSE)</a>
+<a href="https://developers.coinbase.com">Developers</a>
+<a href="https://chain.com/docs">Chain API</a>
 <a href="https://insight.bitpay.com">insight by BitPay</a>
-<a href="https://www.blockonomics.co">Blockonomics.co</a>
         </nav>
       </div>
       <div class="span2">
@@ -234,7 +233,8 @@
         <nav>
 <a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a>
 <a href="https://cryptowat.ch/btce/ltcbtc/5min">LTC/BTC</a>
-<a href="https://whaleclub.co">Whale</a>
+<a href="https://whaleclub.co">WhaleClub</a>
+<a href="https://www.blockonomics.co">Blockonomics.co</a>
         </nav>
       </div>
       <div class="span2">
@@ -269,7 +269,6 @@
 <option value="it">Italiano</option>
 <option value="nl">Nederlands</option>
 <option value="pt">Português</option></select></p>
-  <!-- <small><a href="https://crowdin.com/project/coinbase">Help translate Coinbase</a></small> -->
 </div>
 
       </div>
