--- a/vault.html
+++ b/vault.html
@@ -222,7 +222,7 @@
         <h4>API</h4>
         <nav>
 <a href="https://blockchain.info">Blockchain.info</a>
-<a href="https://exchange.coinbase.com">Exchange (NYSE)</a>
+<a href="https://exchange.coinbase.com">Exchange NYSE</a>
 <a href="https://developers.coinbase.com">Developers</a>
 <a href="https://chain.com/docs">Chain API</a>
 <a href="https://insight.bitpay.com">insight by BitPay</a>
@@ -234,7 +234,7 @@
 <a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a>
 <a href="https://cryptowat.ch/btce/ltcbtc/5min">LTC/BTC</a>
 <a href="https://whaleclub.co">WhaleClub</a>
-<a href="https://www.blockonomics.co">Blockonomics.co</a>
+<a href="https://www.blockonomics.co">Blockonomics</a>
         </nav>
       </div>
       <div class="span2">
