--- a/vault.html
+++ b/vault.html
@@ -259,7 +259,7 @@
       </div>
       <div class="span2">
         <div class="footer-locale-select">
-  <h4>Language</h4>
+  <h4>Язык</h4>
   <p><select name="locale" id="locale_select">
 <option selected="selected" value="en">Русский</option>
 <option value="en">English</option>
