--- a/vault.html
+++ b/vault.html
@@ -111,6 +111,11 @@
       Хранение
       </a>
     </li>
+    <li>
+      <a href="/blockchain-bitcoin-consulting" class="active">
+      Консалтинг
+      </a>
+    </li>
   </ul>
 </div>
 
