--- a/vault.html
+++ b/vault.html
@@ -112,7 +112,7 @@
       </a>
     </li>
     <li>
-      <a href="/blockchain-bitcoin-consulting" class="active">
+      <a href="/blockchain-bitcoin-consulting">
       Консалтинг
       </a>
     </li>
