--- a/buy-sell-bitcoin.html
+++ b/buy-sell-bitcoin.html
@@ -66,7 +66,7 @@
         <ul class="nav clearfix">
               <li class='top-balance'>
                 <a href="/charts">
-                  1 BTC = $239.55
+                  1 BTC = $236.55
 </a>              </li>
             <li class=" signin"><a href="/signin">Вход</a></li>
             <li style="margin-top:-1px" class=" signup"><a href="/signup" class="btn">Регистрация</a></li>
@@ -102,12 +102,12 @@
 <div class="subnav" id="nav">
   <ul class="nav">
     <li>
-      <a href="/buy-sell-bitcoin">
-      Покупка/продажа
+      <a href="/buy-sell-bitcoin" class="active">
+      Покупка и продажа
       </a>
     </li>
     <li>
-      <a href="/bitcoin-vault" class="active">
+      <a href="/bitcoin-vault">
       Хранение
       </a>
     </li>
