--- a/vault.html
+++ b/vault.html
@@ -107,7 +107,7 @@
       </a>
     </li>
     <li>
-      <a href="/bitcoin-vault" class="active">
+      <a href="/vault" class="active">
       Хранение
       </a>
     </li>
