--- a/vault.html
+++ b/vault.html
@@ -66,7 +66,7 @@
         <ul class="nav clearfix">
               <li class='top-balance'>
                 <a href="/charts">
-                  1 BTC = $239.55
+                  1 BTC = $236.55
 </a>              </li>
             <li class=" signin"><a href="/signin">Вход</a></li>
             <li style="margin-top:-1px" class=" signup"><a href="/signup" class="btn">Регистрация</a></li>
@@ -103,7 +103,7 @@
   <ul class="nav">
     <li>
       <a href="/buy-sell-bitcoin">
-      Покупка/продажа
+      Покупка и продажа
       </a>
     </li>
     <li>
